epserde/tests/fail/force_repl_on_zero_copy.stderr
error: `force_repl` cannot be applied to a field of a zero-copy type
  --> tests/fail/force_repl_on_zero_copy.rs:13:15
   |
13 |     #[epserde(force_repl)]
   |               ^^^^^^^^^^
